Added a cheeky comment

--- a/.htaccess
+++ b/.htaccess
@@ -11,6 +11,8 @@
 
 # Hello
 
+# This comment only goes on testing
+
 # ----------------------------------------------------------------------
 # Better website experience for IE users
 # ----------------------------------------------------------------------
