Added a comment to htaccess

--- a/.htaccess
+++ b/.htaccess
@@ -13,6 +13,8 @@
 
 # This comment only goes on testing
 
+# This also goes in testing 
+
 # ----------------------------------------------------------------------
 # Better website experience for IE users
 # ----------------------------------------------------------------------
